--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -35,6 +35,9 @@ nav ul{
 .text-primary{
     color: #FD6E0A;
 }
+.text-center{
+    text-align: center;
+}
 nav ul li{
     list-style: none;
     margin-right: 50px;
@@ -116,7 +119,7 @@ nav ul{
 .about{
     border-radius: 10px;
     padding: 130px 150px;
-    margin-top: 130px;
+    
 }
 .about-items{
     display: flex;
@@ -131,4 +134,20 @@ main{
     margin: 0 auto;
     padding: 130px 150px;
     text-align: center;
+
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+
+}
+/* skills */
+.skill-container{
+    display: flex;
+    gap: 25px;
+}
+.skill{
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 #000000;
+    border-radius: 5px;
 }
