--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -81,6 +81,10 @@ nav ul{
 }
 .secondery-bg{
     background-color: #FFF8F3;
+
+}
+.button-cv{
+    margin-top :50px ;
 }
 /* banner styles */
 
@@ -107,8 +111,14 @@ nav ul{
     font-weight: regular;
     
 }
+.img-hardy{
+    margin: 0px;
+    padding: 0px;
+}
 .banner-pp{
     width: 584px;
+    margin: 0px;
+    padding: 0px;
 }
 .head{
     background-image: url(../images/developer.png), url(../images/header_bg.png);
@@ -150,4 +160,15 @@ main section{
     padding: 30px;
     box-shadow: 0 6px 50px 0 #000000;
     border-radius: 5px;
+}
+/* resume section styles */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience{
+    color: #757575;
+    
+
+    
 }
